--- a/src/assets/styles/pages/solution/_solution_cta.scss
+++ b/src/assets/styles/pages/solution/_solution_cta.scss
@@ -2,7 +2,7 @@
 
 .c-solution-cta {
     position: relative;
-    height: 54rem;
+    height: 100%;
     overflow: hidden;
     border-radius: 0.8rem;
 
